The layout no longer gets pushed around by content that is too wide

--- a/advis_plugin/dashboard/dialogs/input_image_selection_dialog/input-image-selection-dialog.scss
+++ b/advis_plugin/dashboard/dialogs/input_image_selection_dialog/input-image-selection-dialog.scss
@@ -10,27 +10,28 @@ $inner-padding: 5px;
 	margin: 0;
 	padding: 0;
 	
-	display: flex;
-	flex-direction: row;
-	
 	.container {
 		display: flex;
 		flex-direction: column;
 	}
 	
 	#matrix-container {
-		flex: 0.6;
+		width: calc(60% - 1px);
+		height: 100%;
+		float: left;
+		
 		border-right: 1px solid $light-foreground-color;
 		
 		confusion-matrix {
 			flex: 1;
 			width: 100%;
-			height: 100%;
 		}
 	}
 	
 	#image-list-container {
-		flex: 0.4;
+		width: 40%;
+		height: 100%;
+		float: right;
 		
 		iron-list {
 			flex: 1;
